# ECE445_Surveillance_Drone

./: README.md  flight_computer.kicad_pcb
arduino_c/ECE_445/: Drone_Sensor.cpp  Drone_Sensor.h  SIM7600.cpp  Servo_Control.h
client/: package-lock.json  package.json
client/ece445-client/: package-lock.json
client/src/: App.tsx  app.css
client/src/components/map/: map.tsx
esp32_code/ECE_445/: ECE_445.ino  SIM7600.h  Servo_Control.cpp
kicad_files/: flight_computer.kicad_sch
server/: CMakeLists.txt  Dockerfile  Makefile  websocket
server/include/: commandControl.h
server/src/: client_test.py  commandControl.cpp  commands.txt  curl_command.txt  lock_test.cpp  main.cpp  main_test.cpp  tester.cpp
